--- a/app/src/main/res/drawable/button_bg1.xml
+++ b/app/src/main/res/drawable/button_bg1.xml
@@ -2,10 +2,21 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
+        android:startColor="@color/cardStartColor"
+        android:endColor="@color/cardEndColor"
+        android:type="linear"
+        android:angle="270"/>
+    <corners
+        android:radius="@dimen/dim_12"/>
+    <stroke android:color="@color/white" android:width="@dimen/dim_1"/>
+</shape>
+<!-- <shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <gradient
         android:startColor="@color/LightBlue_StartColor"
         android:endColor="@color/LightBlue_EndColor"
         android:type="linear"
         android:angle="270"/>
     <stroke android:color="@color/white" android:width="@dimen/dim_1"/>
     <corners android:radius="@dimen/dim_4" />
-</shape>
+</shape> -->
