Complete stable version 1.0.0 bug fix receiver and foodMap dynamic synchronization

--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -53,6 +53,7 @@
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
                     android:textSize="@dimen/sp_16"
+                    android:textColor="@color/Text1"
                     android:fontFamily="@font/opensans"/>
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -71,6 +72,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/sp_16"
+                    android:textColor="@color/Text1"
                     android:fontFamily="@font/opensans"
                     android:inputType="textPassword"/>
             </com.google.android.material.textfield.TextInputLayout>
